--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "release": "yarn && yarn build && docker build . -t shuzhang/block-search:0.1.0"
   },
   "eslintConfig": {
     "extends": [
